--- a/arm32v7/docker-compose-nodered.yml
+++ b/arm32v7/docker-compose-nodered.yml
@@ -8,7 +8,7 @@ services:
       - 1880:1880
 
   kiosk-node-red:
-    image: torizon/arm32v7-debian-kiosk-mode-browser:latest
+    image: torizon/kiosk-mode-browser:1
     command: --browser-mode http://nodered:1880
     privileged: true
     volumes:
